--- a/ResourcesTest.Tests/ResourcesTest.Tests.csproj
+++ b/ResourcesTest.Tests/ResourcesTest.Tests.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ResourcesTest.csproj" />
+    <ProjectReference Include="..\src\ResourcesTest.csproj" />
   </ItemGroup>
 </Project>
